# Addness-cli

./: .env  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh  state.json
.cargo/: audit.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/addness-goal-action/: action.yml
.github/workflows/: ci.yml  release.yml  security.yml  upstream-sync.yml
.playwright-mcp/: page-2026-06-16T10-23-47-997Z.yml  page-2026-06-16T10-27-45-167Z.yml  page-2026-06-16T10-28-49-778Z.yml  page-2026-06-16T10-30-13-503Z.yml  page-2026-06-16T10-34-52-443Z.yml  page-2026-06-16T10-36-46-073Z.yml
docs/: OPEN_SOURCE_CHECKLIST.md  backend-endpoint-inventory.md  cli-endpoint-coverage.md  cli-write-coverage-plan.md  subagent-goal-protocol.md  upstream-surface.md  upstream-sync.md
docs/release-notes/: today-command.md
src/: debug_log.rs  main.rs  update_check.rs
src/api/: client.rs  comments.rs  goals.rs  mod.rs  models.rs
src/api/client/: activity.rs  api_key.rs  assignment.rs  chat.rs  codex_job.rs  comment.rs  consent.rs  core_values.rs  deliverable.rs  desktop_auth.rs  diagnosis.rs  goal.rs  goal_chat.rs  goal_decompose.rs  goal_execution.rs  goalreport.rs  inlinemedia.rs  invitation.rs  invoice.rs  issue.rs  kpi.rs  master_plan.rs  meeting.rs  member.rs  notification.rs  org.rs  personal.rs  referral.rs  search.rs  sharetree.rs  skill.rs  streak.rs  thread.rs  todo_chat.rs  tool.rs  user.rs
src/api/models/: activity.rs  api_key.rs  assignment.rs  chat.rs  codex_job.rs  comment.rs  consent.rs  core_values.rs  deliverable.rs  desktop_auth.rs  diagnosis.rs  goal.rs  goal_chat.rs  goal_execution.rs  goalreport.rs  inlinemedia.rs  invitation.rs  invoice.rs  issue.rs  kpi.rs  master_plan.rs  meeting.rs  member.rs  notification.rs  org.rs  personal.rs  referral.rs  search.rs  sharetree.rs  skill.rs  streak.rs  thread.rs  todo_chat.rs  tool.rs  user.rs
src/cli/: output.rs
src/cli/commands/: activity.rs  ai_chat_render.rs  api_key.rs  assignment.rs  auth.rs  chat.rs  codex_job.rs  comment.rs  comments.rs  configure.rs  consent.rs  core_values.rs  deliverable.rs  desktop_auth.rs  detect.rs  diagnosis.rs  execution.rs  goal.rs  goal_chat.rs  goal_decompose_render.rs  goals.rs  invitation.rs  invoice.rs  issue.rs  kpi.rs  link.rs  login.rs  login_success.html  master_plan.rs  media.rs  meeting.rs  member.rs  mod.rs  notification.rs  org.rs  personal.rs  referral.rs  search.rs  (+12 more)
src/config/: credentials.rs  mod.rs  settings.rs
src/tui/: app.rs  codex_memory.rs  codex_pane.rs  file_picker.rs  goal_tree.rs  markdown.rs  mod.rs  ui.rs
tests/: crossterm_mouse_pty.rs
(+5 files in other folders)
