[package]
name = "addness-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "addness"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
