[package]
name = "addness-cli"
version = "0.1.14"
edition = "2024"

[[bin]]
name = "addness"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
colored = "3"
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize", "pkcs8", "pem"] }
rand = "0.8"
base64 = "0.22"
open = "5"
uuid = { version = "1", features = ["v4"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
oauth2 = "4"
form_urlencoded = "1"
futures = "0.3"
spki = "0.7"
clap_complete = "4.6.0"
regex = "1.12.3"
